// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`overlay: adapter colours paint the plot 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": true,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Grain1",
    },
    {
      "color": "#f60",
      "label": "Grain2",
    },
    {
      "color": "#fa0",
      "label": "Grain3",
    },
  ],
  "numRows": 1,
  "overlayLegendApplies": true,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": "#f60",
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": "#fa0",
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
  ],
}
`;

exports[`overlay: rowColor's spare range leads the palette 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": true,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#111111",
      "label": "Islet",
    },
    {
      "color": "#222222",
      "label": "Liver",
    },
    {
      "color": "#4e79a7",
      "label": "Grain4",
    },
  ],
  "numRows": 1,
  "overlayLegendApplies": true,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": "#111111",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": "#222222",
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": "#4e79a7",
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`overlay: tableau10 by name, grouped or not 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": true,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#4e79a7",
      "label": "Islet",
    },
    {
      "color": "#f28e2c",
      "label": "Liver",
    },
    {
      "color": "#e15759",
      "label": "Grain4",
    },
  ],
  "numRows": 1,
  "overlayLegendApplies": true,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": "#4e79a7",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": "#f28e2c",
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": "#e15759",
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows, density: a dialog edit tints the label 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#00f",
      "label": "Islet",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": true,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": "#f00",
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": "#00f",
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows, density: identity moves to the label tint 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": "#f00",
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows, line: dialog edits reorder, recolour the plot and relabel 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#00f",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
    {
      "color": "#f00",
      "label": "Islet",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": true,
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Liver",
      "label": "Liver 3",
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": "#00f",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
  ],
}
`;

exports[`rows, line: dialog edits reorder, recolour the plot and relabel 2`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows, line: the adapter colour, else the plot colour 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows: a focus hides rows without recolouring the kept ones 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#4e79a7",
      "label": "Islet",
    },
    {
      "color": "#e15759",
      "label": "Grain4",
    },
  ],
  "numRows": 2,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#4e79a7",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": "#e15759",
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows: a run lands its tree, a reorder drops it, a reset returns to the seed 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#0068d1",
      "label": "Islet",
    },
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": true,
  "rowTree": "((Grain2,Grain1),(Grain3,Grain4));",
  "sources": [
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows: a run lands its tree, a reorder drops it, a reset returns to the seed 2`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": true,
  "rowTree": undefined,
  "sources": [
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows: a run lands its tree, a reorder drops it, a reset returns to the seed 3`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;

exports[`rows: the declared order leads and the rest keep adapter order 1`] = `
{
  "effectiveColor": {
    "domain": [],
    "domainMid": undefined,
    "field": "score",
    "labels": [],
    "range": [],
    "reverse": false,
    "scale": "threshold",
    "scheme": undefined,
    "title": undefined,
    "value": undefined,
  },
  "isOverlay": false,
  "legendItems": [
    {
      "color": "#0068d1",
      "label": "Liver",
    },
    {
      "color": "#f00",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Islet",
    },
    {
      "color": "#0068d1",
      "label": "Grain4",
    },
  ],
  "numRows": 4,
  "overlayLegendApplies": false,
  "rowArrangementIsCustom": false,
  "rowTree": undefined,
  "sources": [
    {
      "color": undefined,
      "group": "Liver",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain3",
    },
    {
      "color": "#f00",
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain1",
    },
    {
      "color": undefined,
      "group": "Islet",
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain2",
    },
    {
      "color": undefined,
      "group": undefined,
      "label": undefined,
      "labelColor": undefined,
      "name": "Grain4",
    },
  ],
}
`;
